// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01_mad_hatter 1`] = `
Array [
  Object {
    "command": "start-judgement",
    "version": 2,
  },
  Object {
    "command": "start-group",
    "name": "Controle op bestaande code",
    "tags": Array [],
    "visibility": "summary",
  },
  Object {
    "command": "start-group",
    "name": "Stage",
    "sprite": "Stage",
    "tags": Array [],
    "visibility": "summary",
  },
  Object {
    "command": "start-test",
    "name": "Bestaande sprite",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Top, de sprite Stage is niet verwijderd.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Voorgeprogrammeerde blokjes",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Je hebt niets veranderd aan de voorgeprogrammeerde blokjes van de sprite Stage.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Controle op bestaande code",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Top! Je hebt niets veranderd aan de blokjes van sprite Stage.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Rondsligerende blokjes",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Goed zo! Je hebt geen losse blokjes laten rondslingeren.",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "start-group",
    "name": "Nori",
    "sprite": "Nori",
    "tags": Array [],
    "visibility": "summary",
  },
  Object {
    "command": "start-test",
    "name": "Bestaande sprite",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Top, de sprite Nori is niet verwijderd.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Voorgeprogrammeerde blokjes",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Je hebt niets veranderd aan de voorgeprogrammeerde blokjes van de sprite Nori.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Controle op bestaande code",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Top! Je hebt niets veranderd aan de blokjes van sprite Nori.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Rondsligerende blokjes",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Goed zo! Je hebt geen losse blokjes laten rondslingeren.",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "start-group",
    "name": "Hat",
    "sprite": "Hat",
    "tags": Array [],
    "visibility": "summary",
  },
  Object {
    "command": "start-test",
    "name": "Bestaande sprite",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Top, de sprite Hat is niet verwijderd.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Voorgeprogrammeerde blokjes",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Je hebt niets veranderd aan de voorgeprogrammeerde blokjes van de sprite Hat.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Controle op bestaande code",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Top! Je hebt niets veranderd aan de blokjes van sprite Hat.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Rondsligerende blokjes",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Goed zo! Je hebt geen losse blokjes laten rondslingeren.",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "close-group",
    "summary": "De bestaande code is niet gewijzigd.",
  },
  Object {
    "command": "start-group",
    "name": "Testen voor de Hoed",
    "tags": Array [],
    "visibility": "show",
  },
  Object {
    "command": "start-test",
    "name": "Hoed verandert bij klikken",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Kostuums van de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Klikken op de hoed",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Correcte blokken",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`02_papegaai 1`] = `
Array [
  Object {
    "command": "start-judgement",
    "version": 2,
  },
  Object {
    "command": "start-group",
    "name": "Testen voor de Papegaai",
    "visibility": "show",
  },
  Object {
    "command": "start-test",
    "name": "Papegaai bestaat",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Papegaai beweegt niet",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Papegaai vliegt enkel horizontaal",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.2165789609714974",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.4983973001423014",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.6150841434614063",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.19843879604101833",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.8526033719101519",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.04642983889045595",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.2316213679197999",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.36833606377437567",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.19018709287663796",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.9481745606476195",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.8620147969967875",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.9101281237480078",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.25574210927832525",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.6061971077347643",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.5376622109864118",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.8020192816528741",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.7979942475379936",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai raakt de rand bij het veranderen van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.15364629595999688",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai vliegt horizontaal.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.4573906342166515",
  },
  Object {
    "command": "close-test",
    "feedback": "De papegaai veranderde minimum 2 keer van richting.",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.5512633986927363",
  },
  Object {
    "command": "close-test",
    "feedback": "De Papegaai klappert met vleugels.",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "start-group",
    "name": "Blokjes",
    "visibility": "show",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.6020632743932764",
  },
  Object {
    "command": "close-test",
    "feedback": "Gebruik van een lus",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.0036119185150366687",
  },
  Object {
    "command": "close-test",
    "feedback": "Correcte gebruik van de lus",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`03_teken_een_vierkant 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "Aantal vierkanten",
  },
  Object {
    "command": "start-testcase",
    "description": "Aantal vierkanten",
  },
  Object {
    "command": "start-test",
    "expected": "1",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "1",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Zijdes hebben lengte 200",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "De pen werd gebruikt",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`04_teken_een_driehoek 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "Aantal driehoeken",
  },
  Object {
    "command": "start-testcase",
    "description": "Aantal driehoeken",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "De pen werd gebruikt",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`05_teken_een_huis 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "De pen werd gebruikt",
  },
  Object {
    "command": "start-testcase",
    "description": "De pen werd gebruikt",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`06_voetballende_kat 1`] = `
Array [
  Object {
    "command": "start-judgement",
    "version": 2,
  },
  Object {
    "command": "start-group",
    "name": "Groep 0.055085085131258336",
    "tags": Array [],
    "visibility": "show",
  },
  Object {
    "command": "start-test",
    "name": "Test 0",
    "tags": Array [],
  },
  Object {
    "command": "close-test",
    "feedback": "Afstand van kat tot voetbal wordt kleiner",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`07_heksenjacht 1`] = `
Array [
  Object {
    "command": "start-judgement",
    "version": 2,
  },
  Object {
    "command": "start-group",
    "name": "Groep 0.36172273738152844",
    "visibility": "show",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.41008109820294864",
  },
  Object {
    "command": "close-test",
    "feedback": "De Heks beweegt niet voor de klik",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "Test 0.5855631229422033",
  },
  Object {
    "command": "close-test",
    "feedback": "De heks heeft bewogen",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "na 1 seconde",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "na 2 seconden",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "tijdens een seconde",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "tijdens een seconde",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "start-test",
    "name": "tijdens een seconde",
  },
  Object {
    "command": "close-test",
    "status": "correct",
  },
  Object {
    "command": "close-group",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`08_op_bezoek_bij_devin 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "Devin stelt zich voor",
  },
  Object {
    "command": "start-testcase",
    "description": "Devin stelt zich voor",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Hallo, ik ben Devin.\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Hallo, ik ben Devin.\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Devin vraagt je naam",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Wat is jouw naam?\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Wat is jouw naam?\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Devin zegt hallo",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Hallo, Louise\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Hallo, Louise\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Devin stelt zich minstens 2 seconden lang voor",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`09_flauw_mopje 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "Bericht nummer 0 komt van de Kat",
  },
  Object {
    "command": "start-testcase",
    "description": "Bericht nummer 0 komt van de Kat",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Kat\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Kat\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Correcte text in bericht nummer 0",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Klop, klop!\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Klop, klop!\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Bericht nummer 1 komt van de Bananen",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Bananen\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Bananen\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Correcte text in bericht nummer 1",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Wie is daar?\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Wie is daar?\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Bericht nummer 2 komt van de Kat",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Kat\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Kat\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Correcte text in bericht nummer 2",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Ki!\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Ki!\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Bericht nummer 3 komt van de Bananen",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Bananen\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Bananen\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Correcte text in bericht nummer 3",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Ki, wie?\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Ki, wie?\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Bericht nummer 4 komt van de Kat",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Kat\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Kat\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Correcte text in bericht nummer 4",
  },
  Object {
    "command": "start-test",
    "expected": "\\"Neen, dank je. Ik heb liever bananen!\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"Neen, dank je. Ik heb liever bananen!\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`13_cijfersom 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "De berekening van cijfersom 2586",
  },
  Object {
    "command": "start-testcase",
    "description": "De berekening van cijfersom 2586",
  },
  Object {
    "command": "start-test",
    "expected": "\\"21\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"21\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "De berekening van cijfersom 000",
  },
  Object {
    "command": "start-test",
    "expected": "\\"0\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"0\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "De berekening van cijfersom 199999",
  },
  Object {
    "command": "start-test",
    "expected": "\\"46\\"",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "\\"46\\"",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;

exports[`draw_a_square 1`] = `
Array [
  Object {
    "command": "start-judgement",
  },
  Object {
    "command": "start-tab",
    "title": "Testen uit het testplan",
  },
  Object {
    "command": "start-context",
    "description": "Squares were detected",
  },
  Object {
    "command": "start-testcase",
    "description": "Squares were detected",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "Sides have length 200",
  },
  Object {
    "command": "start-test",
    "expected": "200",
  },
  Object {
    "command": "append-message",
    "message": "The detected square does not have sides with length 200.",
  },
  Object {
    "accepted": false,
    "command": "close-test",
    "generated": "150",
    "status": Object {
      "enum": "wrong",
      "human": "Wrong",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "start-testcase",
    "description": "The Pen extension is used",
  },
  Object {
    "command": "start-test",
    "expected": "true",
  },
  Object {
    "accepted": true,
    "command": "close-test",
    "generated": "true",
    "status": Object {
      "enum": "correct",
      "human": "Correct",
    },
  },
  Object {
    "command": "close-testcase",
  },
  Object {
    "command": "append-message",
    "message": "You could improve your solution by using a \\"repeat\\"-block.",
  },
  Object {
    "command": "close-context",
  },
  Object {
    "command": "close-tab",
  },
  Object {
    "command": "close-judgement",
  },
]
`;
